--- a/react/frontend/package.json
+++ b/react/frontend/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "tallyvision-frontend",
+  "version": "22.4.12",
   "private": true,
   "dependencies": {
-    "cra-template": "1.1.3",
+    "@craco/craco": "^6.4.3",
+    "antd": "^4.19.5",
+    "cra-template": "1.2.0",
+    "craco-less": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -32,6 +35,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!antd|@ant-design|rc-.+?|@babel/runtime).+(js|jsx)$"
     ]
   }
 }
