--- a/react/frontend/package.json
+++ b/react/frontend/package.json
@@ -7,6 +7,7 @@
     "antd": "^4.19.5",
     "cra-template": "1.2.0",
     "craco-less": "^2.0.0",
+    "framer-motion": "^6.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
