--- a/pug/package.json
+++ b/pug/package.json
@@ -6,8 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.6.1",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -16,6 +15,6 @@
     "node-sass-middleware": "1.0.1",
     "pug": "^3.0.2",
     "socket.io": "^4.0.1",
-    "sqlite": "^3.0.6"
+    "sqlite3": "^5.0.2"
   }
 }
