--- a/react/app/package.json
+++ b/react/app/package.json
@@ -11,6 +11,7 @@
     "express": "~4.17.3",
     "http-errors": "~2.0.0",
     "morgan": "~1.10.0",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.3"
   }
 }
