--- a/react/app/package.json
+++ b/react/app/package.json
@@ -1,17 +1,18 @@
 {
   "name": "tallyvision-backend",
-  "version": "22.4.25",
+  "version": "22.5.5",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "antd": "^4.20.2",
     "cookie-parser": "^1.4.6",
     "debug": "~4.3.4",
-    "express": "~4.17.3",
+    "express": "~4.18.1",
     "http-errors": "~2.0.0",
     "morgan": "~1.10.0",
-    "socket.io": "^4.4.1",
-    "sqlite3": "^5.0.3"
+    "socket.io": "^4.5.0",
+    "sqlite3": "^5.0.7"
   }
 }
