Updating version number.

--- a/react/app/package.json
+++ b/react/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tallyvision-backend",
-  "version": "22.5.5",
+  "name": "tallyvision",
+  "version": "22.5.8",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
