--- a/react/frontend/package.json
+++ b/react/frontend/package.json
@@ -8,6 +8,7 @@
     "cra-template": "1.2.0",
     "craco-less": "^2.0.0",
     "react": "^18.0.0",
+    "react-circle-flags": "^0.0.17",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
